Create capoTableColumn and implement getMinFret method, and test method